# MUSIC

./: CMakeLists.txt
CMake/: Configure.cmake
src/: CMakeLists.txt  files.cmake
src/music/: subconnector.hh
